--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-scripts": "1.0.13",
     "redux": "^3.7.2",
     "redux-logic": "^0.12.3",
+    "redux-thunk": "^2.2.0",
     "semantic-ui-css": "^2.2.12",
     "semantic-ui-react": "^0.74.2"
   },
